# DuckCloud

./: README.md
duck_cloud/: Cargo.toml
duck_cloud/src/: client.rs  format.rs  main.rs  models.rs  server.rs
duck_cloud/src/client/: auth.rs  consts.rs  crypto.rs  file_manager.rs  menu.rs  session.rs  utils.rs
duck_cloud/src/server/: api.rs  auth.rs  consts.rs  crypto.rs  file_manager.rs
