[package]
name = "duck_cloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = "0.6.4"
hkdf = "0.12.4"
sha2 = "0.10.8"
hex = { version = "0.4.3", features = [] }
argon2 = "0.5.2"
hex-literal = "0.4.1"
bytes = "1.5.0"
base64 = { version = "0.21.5", features = [] }
chacha20poly1305 = { version = "0.9.0", features = ["stream"] }
cipher = "0.3.0"
anyhow = "1.0.76"
aead = { version = "0.4.3", features = ["rand_core"] }
generic-array = "0.14.7"
rand = { version = "0.8.5", features = [] }
typenum = { version = "1.17.0", features = [] }
rsa = { version = "0.9.6", features = ["sha2"] }
num = "0.4.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
lazy_static = { version = "1.4.0", features = [] }
cliclack = "0.1.10"
